photo promote code changes

--- a/app/views/help/photo-with-a-code.html
+++ b/app/views/help/photo-with-a-code.html
@@ -9,8 +9,7 @@
     <h1>{{ hmpoTitle }}</h1>
 
     <h2>How to get a photo code</h2>
-    <p>Check if the photo code is available at your local photo shop or booth.</p>
-    <p>You’ll need to choose to get a code with your photo.</p>
+    <p>At your local photo shop or booth, you’ll need to choose to get a code with your photo.</p>
 
     <h2>How to use a photo code</h2>
     <p>It’s simple and easy to use. In the online passport application:</p>
