--- a/app/views/photo/digital-photo.html
+++ b/app/views/photo/digital-photo.html
@@ -5,18 +5,18 @@
 {% block mainContent %}
     <h1>{{ hmpoTitle }}</h1>
 
-    <h2>Photo taken at home</h2>
-    <p>Get someone to take your photo using a digital camera, smartphone or tablet.</p>
+    <h2>Go to a photo booth</h2>
+    <p>You'll need to choose to get a <a href="/help/photo-with-a-code" target="_blank">photo with a code</a>. In the passport application, simply enter the code to 
+    access your photo, and add it to your application.</p>
 
-    <h2>Photo taken in a booth or shop</h2>
-    <p>You can go to a:</p>
-    <ul class="govuk-list govuk-list--bullet">
-        <li>photo booth or shop and <a href="/help/photo-with-a-code" target="_blank">get a code</a> to add the photo to your application</li>
-        <li>photo shop and get a digital photo</li>
-    </ul>
+    <h2>Go to a photo shop</h2>
+    <p>Get a digital copy of your photo, to upload to your application. You can also ask for a <a href="/help/photo-with-a-code" target="_blank">photo with a code</a>.</p>
+
+    <h2>Take a digital photo during your application</h2>
+    <p>You'll need someone to help you take a photo using a digital camera, smartphone or tablet.</p>
 
     {% call hmpoInsetText() %}
-        <p>Photos from a booth or shop are more likely to meet the rules for digital passport photos.</p>
+        <p>Booth and shop photos are checked for you - they are more likely to meet the rules and pass our checks.</p>
     {% endcall %}
 
     {% call hmpoForm(ctx) %}
