refactor photo re-submit routing

--- a/app/views/photo/photo-check-result.html
+++ b/app/views/photo/photo-check-result.html
@@ -139,7 +139,7 @@
         {{ govukButton({
         text: "get a different photo",
         classes: "govuk-button--secondary",
-        href: "/photo/choose-photo-method"
+        href: "/photo/digital-photo"
     }) }}
     {% endcall %}
 {% else %}
