--- a/app/views/archive.html
+++ b/app/views/archive.html
@@ -34,6 +34,16 @@
     <span class="govuk-caption-xl">{{ govukServiceName }}</span>
     <h1>{{ hmpoTitle }}</h1>
 
+    <h2>Surge photo changes</h2>
+    <p>Lab days (remote labs)</p>
+    <ul class="govuk-list govuk-list--bullet">
+        <li><a href="https://hmpo-210525-surge-changes.herokuapp.com/">25 May 2021</a></li>
+    </ul>
+
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+
+
     <h2>DPS Change of Name by Marriage</h2>
     <p>Lab days (remote labs)</p>
     <ul class="govuk-list govuk-list--bullet">
