Accessibility statement updates
Updates to accessibility statement, and correction of small typo on application summary page for lost or stolen applications.

--- a/app/views/apply/application-summary.html
+++ b/app/views/apply/application-summary.html
@@ -47,12 +47,12 @@
 
         {# Lost or Stolen Child 0–11s, Lost or Stolen Child 12–15s #}
         {% elif values.applicationType == "renew" and values.lost and values.adultOrChild == "child" %}
-            <p>Based on your answers, your passport was lost or stolen. you’re applying for a replacement child passport.</p>
+            <p>Based on your answers, your passport was lost or stolen. You’re applying for a replacement child passport.</p>
             <p>If you want to change the name on this passport, we’ll ask for the details later on.</p>
 
         {# Lost or Stolen Adult #}
         {% elif values.applicationType == "renew" and values.lost and values.adultOrChild == "adult" %}
-            <p>Based on your answers, your passport was lost or stolen. you’re applying for a replacement adult passport.</p>
+            <p>Based on your answers, your passport was lost or stolen. You’re applying for a replacement adult passport.</p>
             <p>If you want to change the name on this passport, we’ll ask for the details later on.</p>
 
         {# 0–11 Renewals, 12–15 Renewals #}
