further changes for surge v2 labs

--- a/app/views/filter/intro.html
+++ b/app/views/filter/intro.html
@@ -60,7 +60,7 @@
                     </li>
                     <li>
                         <h2>Provide application details</h2>
-                        <p>Fill in your application details.</p>
+                        <p>If you're applying on behalf of an adult or child, fill in their application details rather than your own.</p>
                     </li>
                     <li>
                         <h2>Find out what documents you need to send</h2>
