--- a/app/views/photo/digital-photo.html
+++ b/app/views/photo/digital-photo.html
@@ -6,18 +6,17 @@
     <h1>{{ hmpoTitle }}</h1>
 
     <h2>Go to a photo booth</h2>
-    <p>You'll need to choose to get a <a href="/help/photo-with-a-code" target="_blank">photo with a code</a>. In the passport application, simply enter the code to 
-    access your photo, and add it to your application.</p>
+    <p>You'll need to choose to get a <a href="/help/photo-with-a-code" target="_blank">photo with a code</a>. It's easy to use when you apply online - simply enter the code to add the photo to your application.</p>
 
     <h2>Go to a photo shop</h2>
-    <p>Get a digital copy of your photo, to upload to your application. You can also ask for a <a href="/help/photo-with-a-code" target="_blank">photo with a code</a>.</p>
+    <p>You'll get a digital photo taken by a photograther. You can also ask for a <a href="/help/photo-with-a-code" target="_blank">photo with a code</a>.</p>
 
     {{ govukInsetText({
         classes: 'govuk-inset-text hmpo-inset-info',
-        text: "Booth and shop photos are checked for you - they are more likely to meet the rules and pass our checks."
+        text: "Photos from a booth or shop are more likely to pass our checks."
     }) }}
     
-    <h2>Take a digital photo during your application</h2>
+    <h2>Take a digital photo at home</h2>
     <p>You'll need someone to help you take a photo using a digital camera, smartphone or tablet.</p>
 
     {% call hmpoForm(ctx) %}
