--- a/app/views/photo/how-to-take-a-photo.html
+++ b/app/views/photo/how-to-take-a-photo.html
@@ -328,9 +328,9 @@
 
     <p>Use this guidance to take a digital photo that meets the passport photo rules.</p>
 
-    {% call hmpoInsetText() %}
-        If your photo doesn’t meet the rules you may have problems with your application or when you travel.
-    {% endcall %}
+    <div class="govuk-inset-text hmpo-inset-info">
+        You may find it easier to get a <a href="/help/photo-with-a-code" target="_blank">photo with a code</a>.They are more likely to pass our checks.
+    </div>
 
     {% if values.adultOrChild == 'adult' %}
         {{ adultPhotoSection | safe }}
