--- a/app/views/photo/digital-photo.html
+++ b/app/views/photo/digital-photo.html
@@ -9,7 +9,7 @@
     <p>You'll need to choose to get a <a href="/help/photo-with-a-code" target="_blank">photo with a code</a>. It's easy to use when you apply online - simply enter the code to add the photo to your application.</p>
 
     <h2>Go to a photo shop</h2>
-    <p>You'll get a digital photo taken by a photograther. You can also ask for a <a href="/help/photo-with-a-code" target="_blank">photo with a code</a>.</p>
+    <p>You'll get a digital photo taken by a photographer. You can also ask for a <a href="/help/photo-with-a-code" target="_blank">photo with a code</a>.</p>
 
     {{ govukInsetText({
         classes: 'govuk-inset-text hmpo-inset-info',
