add SLA page to dps journey

--- a/app/views/urgent/urgent-gov-uk-change-your-name.html
+++ b/app/views/urgent/urgent-gov-uk-change-your-name.html
@@ -93,7 +93,7 @@
                 </ul>
 
                 <h2 class="govuk-heading-m">How long it takes</h2>
-                <p><a href="">Check out how long it'll take to get your passport before you apply</a>. It takes longer to apply by post than online.
+                <p><a href="../help/about-our-services-gov-uk" target="_blank">Check out how long it'll take to get your passport before you apply</a>. It takes longer to apply by post than online.
                 {# <p>Allow up to 10 weeks to get your passport. It takes longer to apply by post than online.</p> #}
                 <p>You may be able to <a href="/urgent/urgent-gov-uk">get a passport urgently</a> if you need to travel sooner.</p>
                 <p>Do not book travel until you have a valid passport - your new passport will not have the same number as your old one.</p>
