minor bug fixes

--- a/app/views/urgent/urgent-gov-uk.html
+++ b/app/views/urgent/urgent-gov-uk.html
@@ -85,7 +85,7 @@
                 <p>The earliest appointment is 7 days from when you apply.</p>
                 <p>You’ll need to go to a <a href="https://www.postoffice.co.uk/branch-finder">Post Office</a> to apply, pay and book an appointment at a passport office.</p>
                 <p>You’ll get your new passport at your appointment.</p>
-                <p><a href="">Use the 1 week Fast Track service</a></p>
+                <p><a href="./urgent-fast-track">Use the 1 week Fast Track service</a></p>
 
             </div>
         </main>
