--- a/app/views/help/about-our-services-gov-uk.html
+++ b/app/views/help/about-our-services-gov-uk.html
@@ -63,14 +63,11 @@
     </style>
 
     <div class="govuk-grid-row">
-        <main id="content" role="main" class="">
+        <main class="govuk-main-wrapper--auto-spacing">
 
-            <header class="page-header govuk-grid-column-two-thirds">
+            <div class="govuk-grid-column-two-thirds">
                 <h1 class="govuk-heading-xl">{{ hmpoTitle }}</h1>
                 <p class="title-paragraph">How long your passport application takes depends on what you're applying for and which service you use.</p><br><br>
-            </header>
-
-            <div class="govuk-grid-column-two-thirds-from-desktop">
                 <h1 class="part-title">Passport application processing times</h1>
                 <div class="govuk-inset-text hmpo-inset-info">
                     Demand for passports is likely to be high as travel restrictions ease. There may be delays and passport applications could take up to 10 weeks. 
@@ -80,16 +77,15 @@
                 <p>There are different turnaround times if you're applying <a href="https://www.gov.uk/overseas-passports">from another country</a>.</p>
             </div>
         
-
             <div class="govuk-grid-column-full" style="margin-top:3em;">
                 <table class="govuk-table" style="margin-bottom:4em;">
                     <caption class="govuk-table__caption govuk-table__caption--l" style="font-size:23px; padding-bottom:20px;">Adult passport applications (16 or older)</caption>
                     <thead class="govuk-table__head">
                         <tr class="govuk-table__row">
-                        <th scope="col" class="govuk-table__header"> </th>
-                        <th scope="col" class="govuk-table__header">Standard £75.50</th>
-                        <th scope="col" class="govuk-table__header">Fast Track £142</th>
-                        <th scope="col" class="govuk-table__header">Online Premium £177</th>
+                        <th class="govuk-table__header"> </th>
+                        <th class="govuk-table__header">Standard £75.50</th>
+                        <th class="govuk-table__header">Fast Track £142</th>
+                        <th class="govuk-table__header">Online Premium £177</th>
                         </tr>
                     </thead>
                     <tbody class="govuk-table__body">
@@ -164,7 +160,7 @@
                 </table>
             </div>
 
-            <div class="govuk-grid-column-two-thirds-from-desktop">
+            <div class="govuk-grid-column-two-thirds">
                 <h1 class="part-title">If you've already applied</h1>
                 <p>You can <a href="https://www.gov.uk/track-passport-application">track your passport application</a>.</p>
                 <h1 class="part-title">Urgent travel for compassionate reasons</h1>
@@ -173,7 +169,5 @@
             </div>
         </main>
     </div>
-  </div>
-</div>
 
 {% endblock %}
